--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -24,6 +24,7 @@
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/appBundle.js"></script>
+    <script src="scripts/js/linq.js"></script>	
     <script src="scripts/js/phaser.js"></script>	
     <!--<script src="scripts/js/game.js"></script>-->	
     <!--<script src="scripts/js/Game2.js"></script>	-->
