--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -19,8 +19,11 @@
     </div>-->
 
     <div id="content"></div>
+    <div id="loading" style="display: none; z-index: 999999999; background-color: red; position: absolute; top:0px; bottom:0px; width: 100%; height: 100%">xxx</div>
 
-    <!-- Cordova reference, this is added to your app when it's built. -->
+
+
+<!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/appBundle.js"></script>
