--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -12,6 +12,7 @@
 
     <!-- PhaserGame references -->
     <link href="css/index.css" rel="stylesheet" />
+    <link href="css/jquery-ui.min.css" rel="stylesheet" />
 </head>
 <body>
     <!--<div class="app">
@@ -19,7 +20,18 @@
     </div>-->
 
     <div id="content"></div>
-    <div id="loading" style="display: none; z-index: 999999999; background-color: red; position: absolute; top:0px; bottom:0px; width: 100%; height: 100%">xxx</div>
+    <div id="loading" style="display: none;
+      vertical-align: middle;
+      text-align: center; z-index: 99999999;
+                                         background-image: url('./images/menuBackground.jpg');
+                                         background-size: cover;
+                                         background-repeat: no-repeat;
+                                         background-position: center center; position: absolute; top: 0px; bottom: 0px; width: 100%; height: 100%">
+
+        <div id="progressbar" style="z-index: 999999999; position: absolute;
+  top: 50%; left: 50%; width: 50%; height: 10%;
+  transform: translate(-50%,-50%);"></div>
+    </div>
 
 
 
@@ -28,6 +40,8 @@
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/appBundle.js"></script>
     <script src="scripts/js/linq.js"></script>	
+    <script src="scripts/js/jquery-3.1.1.min.js"></script>	
+    <script src="scripts/js/jquery-ui.min.js"></script>	
     <script src="scripts/js/phaser.js"></script>	
     <!--<script src="scripts/js/game.js"></script>-->	
     <!--<script src="scripts/js/Game2.js"></script>	-->
