--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -2,40 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8" />
-
-    <!--
-        Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-        For details, see http://go.microsoft.com/fwlink/?LinkID=617521
-    -->
     <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">-->
     <title>PhaserGame</title>
 
-    <!-- PhaserGame references -->
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/jquery-ui.min.css" rel="stylesheet" />
 </head>
 <body>
-    <!--<div class="app">
-        <p id="deviceready" class="event">Connecting to Device</p>
-    </div>-->
-
     <div id="content"></div>
-    <div id="loading" style="display: none;
-      vertical-align: middle;
-      text-align: center; z-index: 99999999;
-                                         background-image: url('./images/menuBackground.jpg');
-                                         background-size: cover;
-                                         background-repeat: no-repeat;
-                                         background-position: center center; position: absolute; top: 0px; bottom: 0px; width: 100%; height: 100%">
 
-        <div id="progressbar" style="z-index: 999999999; position: absolute;
-  top: 50%; left: 50%; width: 50%; height: 10%;
-  transform: translate(-50%,-50%);"></div>
+    <div id="loading" class="loading">
+        <div id="progressbar" class="pb"></div>
     </div>
 
-
-
-<!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/appBundle.js"></script>
@@ -43,8 +22,5 @@
     <script src="scripts/js/jquery-3.1.1.min.js"></script>	
     <script src="scripts/js/jquery-ui.min.js"></script>	
     <script src="scripts/js/phaser.js"></script>	
-    <!--<script src="scripts/js/game.js"></script>-->	
-    <!--<script src="scripts/js/Game2.js"></script>	-->
-    <!--<script src="scripts/js/main.js"></script>-->	
 </body>
 </html>
