--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -12,6 +12,7 @@
     <div id="content"></div>
 
     <div id="loading" class="loading">
+        <div id="datepicker"></div>
         <div id="progressbar" class="pb"></div>
     </div>
 
