--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -13,8 +13,8 @@
 
     <div id="menuScreen" class="pg-backgroundScreen">
         <div id="menuButtons" class="pg-menuButtons pg-center">
-            <button id="startButton" class="pg-menuButton ui-button ui-widget ui-corner-all">START</button>
-            <button id="quitButton" class="pg-menuButton ui-button ui-widget ui-corner-all">ZAKOŃCZ</button>
+            <button id="startButton" class="ui-button ui-widget ui-corner-all">START</button>
+            <button id="quitButton" class="ui-button ui-widget ui-corner-all">ZAKOŃCZ</button>
         </div>
     </div>
 
