--- a/PhaserGame/www/index.html
+++ b/PhaserGame/www/index.html
@@ -13,6 +13,7 @@
 
     <div id="menuScreen" class="pg-backgroundScreen">
         <div id="menuButtons" class="pg-menuButtons pg-center">
+            <button id="resumeButton" class="ui-button ui-widget ui-corner-all" style="display: none">WZNÓW</button>
             <button id="startButton" class="ui-button ui-widget ui-corner-all">START</button>
             <button id="quitButton" class="ui-button ui-widget ui-corner-all">ZAKOŃCZ</button>
         </div>
